--- a/Exit-Portal-Frontend/src/App.css
+++ b/Exit-Portal-Frontend/src/App.css
@@ -77,7 +77,7 @@ h4 {
 ul {
   list-style-type: none;
   max-height: 100vh;
-  width: 100%;
+  width: 50%;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -293,4 +293,36 @@ input {
 
 .details-container {
   text-align: right; /* Align text to the right */
+}
+
+.pagination {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  gap: 10px;
+}
+
+.pagination button {
+  padding: 10px 15px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.pagination button.active {
+  background-color: #0056b3;
+}
+
+.pagination button:disabled {
+  background-color: #d3d3d3;
+  cursor: not-allowed;
+}
+
+.pagination button:hover:not(:disabled) {
+  background-color: #0056b3;
 }
