--- a/Exit-Portal-Frontend/src/App.css
+++ b/Exit-Portal-Frontend/src/App.css
@@ -194,7 +194,7 @@ form{
   flex-direction: column;
 }
 input {
-  width: 80%;
+  width: 100%;
   padding: 10px;
   /* background-color: black; */
   margin: 10px 0;
@@ -306,7 +306,7 @@ input {
 
 .pagination button {
   padding: 10px 15px;
-  background-color: #007bff;
+  background-color: #ff0000b0;
   color: white;
   border: none;
   border-radius: 4px;
@@ -315,11 +315,11 @@ input {
 }
 
 .pagination button.active {
-  background-color: #0056b3;
+  background-color: #b37400;
 }
 
 .pagination button:disabled {
-  background-color: #d3d3d3;
+  background-color: #d6c0c0;
   cursor: not-allowed;
 }
 
