--- a/Exit-Portal-Frontend/src/App.css
+++ b/Exit-Portal-Frontend/src/App.css
@@ -13,7 +13,7 @@
 body {
   font-family: 'Arial', sans-serif;
   background: rgb(249, 249, 249);
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
   display: flex;
   justify-content: center;
