--- a/Exit-Portal-Frontend/src/components/Styles/dashboard.css
+++ b/Exit-Portal-Frontend/src/components/Styles/dashboard.css
@@ -1,5 +1,6 @@
 /* Dashboard Styles */
 .dashboard {
+  position: relative;
     width: 95%;
     margin: 20px auto;
     padding: 20px;
@@ -20,11 +21,22 @@
   }
   
   .summary {
+    padding: 5px 10px;
     width: 50%;
     display: flex;
     flex-direction: row;
-    gap: 20px;
-    justify-content: space-evenly;
+
+    /* gap: 20px; */
+    justify-content: center;
+    /* align-items: stretch; */
+
+    h3{
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
 
     a{
         color: darkblue;
