--- a/Exit-Portal-Frontend/src/components/Styles/popupdetails.css
+++ b/Exit-Portal-Frontend/src/components/Styles/popupdetails.css
@@ -17,6 +17,7 @@
   border-radius: 10px;
   max-width: 900px;
   width: 80%;
+  max-height: 70vh;
   position: relative;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15); /* Stronger shadow */
   animation: fadeIn 0.4s ease-in-out;
@@ -24,6 +25,9 @@
 
 .popup-content {
   text-align: center;
+  overflow-x: auto;
+  display: block;
+  
 }
 
 h3 {
@@ -36,6 +40,8 @@ h3 {
   width: 100%;
   border-collapse: collapse;
   margin: 20px 0;
+  min-width: 600px; /* Set minimum width for scrolling */
+  table-layout: auto; /* Allow flexible table layout */
 }
 
 .course-table th, .course-table td {
