--- a/Exit-Portal-Frontend/src/components/Styles/Login.css
+++ b/Exit-Portal-Frontend/src/components/Styles/Login.css
@@ -139,7 +139,7 @@ form {
   gap: 1rem;
 }
 
-input[type="text"] {
+input[type="text"],input[type="password"] {
   padding: 12px 15px;
   border: 2px solid #ced4da;
   border-radius: 5px;
@@ -147,7 +147,7 @@ input[type="text"] {
   transition: border-color 0.3s ease;
 }
 
-input[type="text"]:focus {
+input[type="text"]:focus,input[type="password"]:focus {
   border-color: #800000;
   outline: none;
 }
