--- a/Exit-Portal-Frontend/src/components/Styles/CustomNavbar.css
+++ b/Exit-Portal-Frontend/src/components/Styles/CustomNavbar.css
@@ -35,6 +35,10 @@
 
 .eligibility-container {
   width: max-content;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  font-size: 1rem;
 }
 
 .details-container p {
@@ -57,21 +61,33 @@
   background-color: transparent;
   font-weight: bolder;
   font-size: 1.5rem;
-  text-decoration: underline;
+  /* text-decoration: underline; */
+  color: white;
   color: #1e1870;
+
   border-radius: 5px;
   position: absolute;
   top: 10px;
   right: 10px;
-  transform: translate(-5%, 15%);
+  transform: translate(-10%, 15%);
+  transition: all ease 0.3s;
   &:hover{
-    background-color:maroon;
+    background-color:transparent;
     color: white;
+    color: #1e1870;
+    text-decoration: underline;
+    transform: scale(1.2) translate(-10%,15%);
+
   }
 }
 @media (max-width: 1000px){
   .portal-title{
     display: none;
+  }
+  .logout-button{
+    &:hover{
+      transform: translate(0%,10) scale(1.1);
+    }
   }
 }
 
@@ -90,6 +106,9 @@
 
   .logout-button{
     transform: translate(-0%, 0%);
+    &:hover{
+      transform: scale(1.1) translate(-5%,0);
+    }
   }
   .student-details {
     flex-direction: column; /* Stack student details vertically */
@@ -139,7 +158,7 @@
 
   .logout-button{
     font-size: 1rem;
-    transform: translate(-0%,5%);
+    transform: translate(-5%,15%);
   }
   .eligibility-container {
     width: 100%; /* Full width */
