--- a/Exit-Portal-Frontend/src/components/Styles/Login.css
+++ b/Exit-Portal-Frontend/src/components/Styles/Login.css
@@ -61,13 +61,13 @@ footer {
   position: relative;
   gap: 2rem;
 
-  animation: fadeIn 0.5s ease-in-out;
+  animation: fadeIn 0.1s ease-in-out;
 }
 
 /* Fade-in Animation */
 @keyframes fadeIn {
   from {
-    opacity: 0.5;
+    opacity: 0.9;
   }
   to {
     opacity: 1;
@@ -118,7 +118,7 @@ footer {
 .login-container {
   width: 400px;
   max-width: 100%;
-  background: rgba(255, 255, 255, 0.95);
+  background: rgba(255, 255, 255, 0.912);
   padding: 2rem;
   border-radius: 10px;
   text-align: center;
@@ -198,7 +198,7 @@ button:hover {
 
 /* Error Message */
 .error-message {
-  color: red;
+  color: rgb(112, 17, 17);
   padding: 1rem;
   font-size: 1rem;
 }
