--- a/Exit-Portal-Frontend/src/components/Styles/Login.css
+++ b/Exit-Portal-Frontend/src/components/Styles/Login.css
@@ -30,6 +30,12 @@ header {
   align-items: center;
   gap: 10px;
 }
+.header-hiph{
+  display: inline;
+}
+.header-br{
+  display: none;
+}
 
 footer {
   bottom: 0;
@@ -274,8 +280,8 @@ button:hover {
     margin-bottom: 1.5rem;
   }
   .login-container {
-    width: 60%;
-    max-width: 100%;
+    width: 70%;
+    max-width: 1000px;
   }
 
   .portal-details h3 {
@@ -327,6 +333,15 @@ button:hover {
   footer {
     font-size: 12px;
   }
+  h1{
+    font-size: 18px;
+  }
+  .header-hiph{
+    display: none;
+  }
+  .header-br{
+    display: inline;
+  }
 
   h2 {
     font-size: 20px;
@@ -336,9 +351,21 @@ button:hover {
     padding: 10px;
   }
   .login-container {
-    width: 90%;
-    max-width: 100%;
+    width: 100%;
+    padding: 5px 0 20px 0;
+    max-width: 750px;
   }
+  .login-container input[type="text"],
+  .login-container input[type="password"] {
+    width: 100%;
+    max-width: 100%;
+    padding: 8px 15px;
+  }
+  .login-container > .logo {
+    padding: 0;
+    margin: 0 auto;
+  }
+
 
   .portal-details {
     max-height: 200px; /* Further reduce height for smaller screens */
