--- a/Exit-Portal-Frontend/src/components/Styles/CustomNavbar.css
+++ b/Exit-Portal-Frontend/src/components/Styles/CustomNavbar.css
@@ -70,7 +70,7 @@
   top: 10px;
   right: 10px;
   transform: translate(-10%, 15%);
-  transition: all ease 0.3s;
+  transition: all ease-in-out 0.3s;
   &:hover{
     background-color:transparent;
     color: white;
